--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.10.6
+  firebase_analytics: ^9.0.4
+  firebase_auth: ^3.3.4
+  cloud_firestore: ^3.1.5
+  search_widget: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +63,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - images/1.jpg
+   - images/2.jpg
+   - images/3.jpg
+   - images/4.jpg
+   - images/5.jpg
+   - images/6.jpg
+   - images/7.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
